Bug 1816299 - Try to avoid sending entirely-clipped glyph runs to a TextDrawTarget. r=gfx-reviewers,lsalzman

Now passes reftests on try:
https://treeherder.mozilla.org/jobs?repo=try&revision=7070b443cce9740358f12b4343c438a28c5808ac

Differential Revision: https://phabricator.services.mozilla.com/D169729